corpus/c/macro_include/case-10/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.c:3:40: error: [macro_include] error surfaced through macro/include context
help: inspect the user-owned macro invocation or include edge that reaches the failing line
from: invocation of 'READ_FIELD' @ src/main.c:3:40
| src/main.c:3:40
| int main(void) { Box box = {1}; return READ_FIELD(box); }
|                                        ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output